public/css/style.css
.nav, .pagination, .carousel, .panel-title a {
  cursor: pointer; /* AngularJS's documented way to fix a Bootstrap/UI Bootstrap compatibility issue */
}

.breadcrumb {
  font-size: 11px;
  margin: 0;
  background-color: transparent;
}

body {
  padding-top: 110px; /* Bootstrap's documented way to make sure the header content and the body content don't conflict */
}

.ace_editor {
  margin-bottom: 20px;
}

.affix {
  position: fixed; /* Affixes Searchbar so it won't scroll with content */
  top: 115px; /* Sets Searchbar location on page */
  width: 61%; /* Sets Searchbar length */
  z-index: 9998; /* Sets the Search bar to layer above all background content */
}

.page-number {
  z-index: 5000;
}

.login {
  margin-left: 40%;
  max-width: 330px;
  padding: 15px;
}

.login section {
    background-color: #eee;
}

